# SubWeaver

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
.qoder/specs/: BS架构字幕服务平台_task-c7d.md
archive/: README.md  audio2text.py  generate_srt.ipynb  generate_srt.py  util.py
backend/: .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt  run_worker.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_translate_llm_model.py  003_add_cancelled_status.py  004_add_cancel_requested.py
backend/app/: config.py  database.py  dependencies.py  main.py  util.py
backend/app/api/v1/: admin.py  auth.py  files.py  health.py  models.py  tasks.py
backend/app/core/: logging.py  security.py  storage.py  task_queue.py
backend/app/models/: system_config.py  task.py  task_output.py  user.py
backend/app/schemas/: admin.py  auth.py  file.py  task.py
backend/app/services/: auth_service.py  config_service.py  file_service.py  task_service.py
backend/app/startup_checker/: checker.py
backend/app/startup_checker/checks/: db_check.py  ffmpeg_check.py  llm_check.py  whisper_check.py
backend/app/worker/: model_manager.py  translator.py  whisper_runner.py  worker.py  yt_dlp_downloader.py
backend/tests/: conftest.py  test_api_auth.py  test_config.py  test_schemas.py  test_security.py  test_startup_checker.py  test_storage.py  test_task_queue.py  test_util.py
frontend/: README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  (+1 more)
(+42 files in other folders)
