[project]
name = "subweaver"
version = "1.0.0"
description = "B/S 架构音视频转文字/字幕服务平台"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "openai>=1.58.0",
    "openai-whisper>=20240930",
    "yt-dlp>=2024.12.0",
    "srt>=3.5.0",
    "tqdm>=4.67.0",
    "loguru>=0.7.3",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.19",
    "alembic>=1.14.0",
    "sse-starlette>=2.2.0",
    "pydantic-settings>=2.7.0",
    "pydantic[email]>=2.10.0",
    "bcrypt>=3.2.0,<4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
